--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 <div id="divSenha" class="loginDivs">
                     <label class="label" for="senha">Senha</label>
                     <input class="campo" type="password" name="senha" id="campoSenha" placeholder="************" required>
-                </div>
+                    <div id="mensagemErro"></div>
+                </div> 
+                
                 <div id="divButtons" class="loginDivs">
                     <input id="buttonEntrar" class="buttons" type="submit" value="Entrar">
                     <input id="buttonCadastrar" class="buttons" type="submit" value="Cadastrar">
